folder structure and mock

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ target/
 *.ipr
 .idea/
 
+
 ### Eclipse ###
 .apt_generated
 .classpath
@@ -37,3 +38,6 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+
+.env
