--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/
 
 ### VS Code ###
 .vscode/
+ .claude/
 
 ### Mac OS ###
 .DS_Store
@@ -42,3 +43,4 @@ build/
 nul
 .env
 Docs/stuff.md
+Docs/FrontendSetupGuide/
