rolling task algorithm for determining task

--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${SUPABASE_HOST}:${SUPABASE_PORT:5432}/${SUPABASE_DB}?sslmode=require
+    url: jdbc:postgresql://${SUPABASE_HOST}:${SUPABASE_PORT:6543}/${SUPABASE_DB}?sslmode=require&prepareThreshold=0
     username: ${SUPABASE_USER}
     password: ${SUPABASE_PASSWORD}
     driver-class-name: org.postgresql.Driver
